@startuml


interface NetworkI {
    double calcDeltaSocPerSlot();
    Informer getInformer();
}

class ChargingStation {
   NetworkI network;  //mediator
       List<ChargingSlot> slots;
       Queue<Vehicle> vehiclesInQueue;

     addArrivedVehicle(Vehicle vehicle)
     updateVehiclesInStation()
}

 class ChargingSlot {

    Vehicle occupVehicle;

    boolean isAvailable()
    void parkVehicle(Vehicle vehicle)
    void chargeVehicle()
    :
}

 class PowerSplitAlgorithm <network acces> {
    NetworkI mediator;

    double deltaSocPerSlot()
    }

class Informer {
     "All fields in station"

     int nOccupiedSlots()
     boolean isAllSlotsOccupied()
:
    }

class VehicleMover <network acces> {

    NetworkI network;

    releaseChargedVehiclesAndAddFromQueue()
    parkVehicleInQueue(Vehicle vehicle)
    releaseAndReplaceVehicle(ChargingSlot slot)

    }

class VehicleCharger <network acces>{
    NetworkI network;

    chargeVehicles()  <calls power splitter via network>
 }

class Vehicle {
      String id;
      double soc;

      void  charge(double deltaSoc)
 }

ChargingStation *-- PowerSplitAlgorithm
ChargingStation *-- VehicleMover
ChargingStation *-- VehicleCharger
ChargingStation *-- Informer
ChargingStation "1" *-d- "many" ChargingSlot
ChargingStation -- Vehicle

'PowerSplitAlgorithm  --- VehicleCharger

@enduml